--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,72 @@
+@import "bootstrap/scss/bootstrap";
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/variables-dark";
+@import "bootstrap/scss/maps";
+@import "bootstrap/scss/mixins";
+@import "bootstrap/scss/utilities";
+
+$all-colors: map-merge-multiple(
+  $blues,
+  $indigos,
+  $purples,
+  $pinks,
+  $reds,
+  $oranges,
+  $yellows,
+  $greens,
+  $teals,
+  $cyans,
+  $grays
+);
+
+$utilities: map-merge(
+  $utilities,
+  (
+    "color":
+      map-merge(
+        map-get($utilities, "color"),
+        (
+          values:
+            map-merge(
+              map-get(map-get($utilities, "color"), "values"),
+              ($all-colors)
+            ),
+        )
+      ),
+    "background-color":
+      map-merge(
+        map-get($utilities, "color"),
+        (
+          values:
+            map-merge(
+              map-get(map-get($utilities, "color"), "values"),
+              ($all-colors)
+            ),
+          property: background-color,
+          class: bg-color,
+        )
+      ),
+  )
+);
+
+@import "bootstrap/scss/utilities/api";
+
 html {
   overflow-y: scroll;
 }
 
 @font-face {
-  font-family: 'Pacifico-Regular';
-  src: url('../src/fonts/Pacifico-Regular.woff2') format('woff2');
+  font-family: "Pacifico-Regular";
+  src: url("../src/fonts/Pacifico-Regular.woff2") format("woff2");
   font-weight: 100;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'GreatVibes-Regular';
-  src: url('../src/fonts/GreatVibes-Regular.ttf') format('woff2');
+  font-family: "GreatVibes-Regular";
+  src: url("../src/fonts/GreatVibes-Regular.ttf") format("woff2");
   font-weight: 100;
   font-style: normal;
   font-display: swap;
